--- a/static/Tutorial1_5.html
+++ b/static/Tutorial1_5.html
@@ -390,6 +390,7 @@
                         <span class="code-line" id="line-3" style="padding-left: 30px;">if numbers[i] < min_value:</span>
                         <span class="code-line" id="line-4" style="padding-left: 50px;">min_value = numbers[i]</span>
                     </div>
+                    <span class="code-line" id="line-5">print(min_value)</span>
                 </div>
                 <div class="step-description" id="step-description" style="display: none;"></div>
             </div>
