--- a/static/problem.html
+++ b/static/problem.html
@@ -77,10 +77,6 @@
         transform: translateY(-1px);
       }
 
-      .nav-btn:hover {
-        background: rgba(255, 255, 255, 0.3);
-      }
-
       .container {
         max-width: 98vw;
         margin: 4px auto;
@@ -187,22 +183,22 @@
         font-size: 15px;
         line-height: 1.3;
         margin-bottom: 8px;
+        padding: 8px 0;
       }
 
-      /* problem-code 내부의 pre와 code 스타일 조정 */
+      /* 수정된 코드 섹션 스타일 */
       .problem-code {
         background: #ffffff;
         border: 1px solid #d1d5db;
         border-radius: 4px;
-        padding: 6px; /* 이 부분을 너무 줄이면 강조박스가 잘릴 수 있습니다 */
+        padding: 6px;
         margin: 6px 0;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
-        position: relative; /* highlighted-section::before를 위해 필요 */
+        position: relative;
         max-width: 100%;
         overflow: hidden;
       }
 
-      /* 기존 "코드" 라벨은 필요에 따라 유지하거나 제거 */
       .problem-code::before {
         content: "코드";
         position: absolute;
@@ -220,19 +216,16 @@
       .problem-code pre {
         margin: 0;
         background: #f8fafc;
-        padding: clamp(6px, 1.5vw, 12px); /* 안쪽 여백 추가 */
+        padding: clamp(8px, 1.5vw, 15px);
         border-radius: 4px;
         border: 1px solid #e2e8f0;
         overflow-x: auto;
         font-family: "Consolas", "Monaco", "Courier New", monospace;
-        font-size: clamp(11px, 2.5vw, 14px);
-        line-height: 1.4;
+        font-size: clamp(12px, 2.5vw, 14px);
+        line-height: 1.5;
         color: #1e293b;
         max-width: 100%;
-        /* pre 안의 code-line들이 줄바꿈되지 않도록 설정 */
-        white-space: pre-wrap; /* 여기서 pre-wrap을 사용하면 긴 라인이 자동으로 줄바꿈됩니다. */
-                            /* 원본 코드의 줄바꿈을 유지하면서 넘칠 때만 줄바꿈하려면 pre-wrap, */
-                            /* 강제 줄바꿈 없이 한 줄로 유지하려면 pre를 사용합니다. */
+        white-space: pre-wrap;
       }
 
       .problem-code code {
@@ -241,39 +234,40 @@
         border: none;
         font-family: inherit;
         color: inherit;
-        white-space: pre; /* 백엔드에서 span 태그 안에 들어있는 각 라인의 공백을 유지합니다. */
+        white-space: pre;
       }
 
-      /* 강조 표시 스타일 (꾸미기 설정) */
+      /* 강조 표시 스타일 개선 */
       .highlighted-section {
-          background: rgba(102, 126, 234, 0.1); /* 연한 파란색 배경 */
-          border: 2px dashed #667eea; /* 점선 테두리 */
-          border-radius: 8px;
-          padding: 10px; /* 안쪽 여백 */
-          margin: 5px 0; /* 위아래 여백 */
-          position: relative;
+        background: rgba(255, 193, 7, 0.2); /* 노란색 배경 */
+        border: 2px solid #ffc107; /* 노란색 테두리 */
+        border-radius: 8px;
+        padding: 8px 12px;
+        margin: 8px 0;
+        position: relative;
+        display: block;
       }
 
       .highlighted-section::before {
-          content: "🎯 집중 구역";
-          position: absolute;
-          top: -12px; /* 상단 여백 조절 */
-          left: 15px; /* 좌측 여백 조절 */
-          background: #667eea;
-          color: white;
-          padding: 4px 12px;
-          border-radius: 12px;
-          font-size: 12px;
-          font-weight: bold;
-          z-index: 2; /* 다른 요소 위에 표시되도록 z-index 설정 */
+        content: "🎯 집중 구역";
+        position: absolute;
+        top: -12px;
+        left: 15px;
+        background: #ffc107;
+        color: #000;
+        padding: 4px 12px;
+        border-radius: 12px;
+        font-size: 11px;
+        font-weight: bold;
+        z-index: 2;
       }
 
-      .code-line { /* 각 코드 줄에 대한 기본 스타일 */
-          display: block; /* 줄바꿈 */
-          padding: 2px 0; /* 줄 간격 조절 */
-          /* 코드 라인 자체의 들여쓰기 등이 포함되어야 하므로 white-space: pre-wrap; 이나 pre는 상위 pre 태그에서만 제어하는 것이 좋습니다. */
+      /* 코드 라인 스타일 */
+      .code-line {
+        display: block;
+        padding: 1px 0;
+        line-height: 1.5;
       }
-
 
       .problem-content pre {
         background: #f8f9fa;
@@ -613,7 +607,7 @@
         }
       }
 
-      // 문제 표시 수정 - 설명과 코드 분리, 강조 표시 반영
+      // 수정된 문제 표시 함수 - 하이라이팅 지원
       function displayProblem(problem) {
         document.getElementById(
           "problemId"
@@ -623,18 +617,21 @@
           "maxScore"
         ).textContent = `최대 ${problem.max_score}점`;
 
-        // 설명과 코드를 분리해서 표시 - 여백 최소화
+        // 설명과 코드를 분리해서 표시 - 백엔드에서 이미 하이라이팅 처리된 HTML을 받음
         const problemTextElement = document.getElementById("problemText");
 
         // 백엔드에서 HTML이 포함된 코드를 받으므로 innerHTML 사용
         problemTextElement.innerHTML = `
             <div class="problem-description">${problem.description}</div>
             <div class="problem-code">
-                <pre><code>${problem.code}</code></pre> </div>
+                <pre><code>${problem.code}</code></pre>
+            </div>
         `;
 
         // 페이지 제목 업데이트
         document.title = `${problem.title} - 학생 답안 제출 시스템`;
+        
+        console.log("Problem loaded:", problem); // 디버깅용
       }
 
       // 기존 제출 내역 표시
